cmake_minimum_required(VERSION 3.0)
project(tidbits)
add_executable(memory_dynamic_wavelet memory_dynamic_wavelet.cpp)
target_link_libraries(memory_dynamic_wavelet metagraph ${METALIBS})
add_symlink(${CMAKE_CURRENT_BINARY_DIR}/memory_dynamic_wavelet ${ROOT_BINARY_DIR}/memory_dynamic_wavelet)
add_executable(dynamic_wavelet_overwrite dynamic_wavelet_overwrite.cpp)
target_link_libraries(dynamic_wavelet_overwrite metagraph ${METALIBS})
add_symlink(${CMAKE_CURRENT_BINARY_DIR}/dynamic_wavelet_overwrite ${ROOT_BINARY_DIR}/dynamic_wavelet_overwrite)
