cmake_minimum_required(VERSION 3.0)
project(tidbits)
add_executable(memory_dynamic_wavelet memory_dynamic_wavelet.cpp)
target_link_libraries(memory_dynamic_wavelet metagraph ${METALIBS})
add_symlink(${CMAKE_CURRENT_BINARY_DIR}/memory_dynamic_wavelet ${ROOT_BINARY_DIR}/memory_dynamic_wavelet)
add_executable(dynamic_wavelet_overwrite dynamic_wavelet_overwrite.cpp)
target_link_libraries(dynamic_wavelet_overwrite metagraph ${METALIBS})
add_symlink(${CMAKE_CURRENT_BINARY_DIR}/dynamic_wavelet_overwrite ${ROOT_BINARY_DIR}/dynamic_wavelet_overwrite)
add_executable(visualize_routing_table visualize_routing_table.cpp)
target_link_libraries(visualize_routing_table metagraph ${METALIBS})
add_symlink(${CMAKE_CURRENT_BINARY_DIR}/visualize_routing_table ${ROOT_BINARY_DIR}/visualize_routing_table)
add_executable(dump_routing_table dump_routing_table.cpp)
target_link_libraries(dump_routing_table metagraph ${METALIBS})
add_symlink(${CMAKE_CURRENT_BINARY_DIR}/dump_routing_table ${ROOT_BINARY_DIR}/dump_routing_table)
add_executable(sdsl_array_small sdsl_array_small.cpp)
target_link_libraries(sdsl_array_small metagraph ${METALIBS})
add_symlink(${CMAKE_CURRENT_BINARY_DIR}/sdsl_array_small ${ROOT_BINARY_DIR}/sdsl_array_small)
add_executable(encoded_vector encoded_vector.cpp)
target_link_libraries(encoded_vector metagraph ${METALIBS})
add_symlink(${CMAKE_CURRENT_BINARY_DIR}/encoded_vector ${ROOT_BINARY_DIR}/encoded_vector)
add_executable(int_buffered_vector int_buffered_vector.cpp)
target_link_libraries(int_buffered_vector metagraph ${METALIBS})
add_symlink(${CMAKE_CURRENT_BINARY_DIR}/int_buffered_vector ${ROOT_BINARY_DIR}/int_buffered_vector)
#add_executable(populate_splits_playground populate_splits_playground.cpp)
#message("metalibs - ${METALIBS}")
#target_link_libraries(populate_splits_playground metagraph ${METALIBS})
#add_symlink(${CMAKE_CURRENT_BINARY_DIR}/populate_splits_playground ${ROOT_BINARY_DIR}/populate_splits_playground)
